diesel_compile_tests/tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.stderr
error[E0277]: `Filter<WhereClause<Grouped<Eq<name, Bound<Text, &str>>>>>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.rs:17:28
     |
17   |         .get_result::<i64>(&mut conn)
     |          ----------        ^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `QueryFragment<Mysql, NoAggregateFunctionExpressions>` is not implemented for `Filter<WhereClause<Grouped<Eq<name, Bound<Text, &str>>>>>`
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<P>` implements `QueryFragment<DB, PostgresLikeAggregateFunctionExpressions>`
               `diesel::expression::functions::aggregate_expressions::aggregate_filter::Filter<P>` implements `QueryFragment<DB>`
     = note: required for `Filter<WhereClause<Grouped<Eq<name, Bound<Text, &str>>>>>` to implement `QueryFragment<Mysql>`
     = note: 4 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: `Order<name, false>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/aggregate_expressions_disallow_unsupported_features_on_mysql.rs:24:28
     |
24   |         .get_result::<i64>(&mut conn)
     |          ----------        ^^^^^^^^^ the trait `QueryFragment<Mysql, NoAggregateFunctionExpressions>` is not implemented for `Order<name, false>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, false>` implements `QueryFragment<DB, PostgresLikeAggregateFunctionExpressions>`
               `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, false>` implements `QueryFragment<DB>`
               `diesel::expression::functions::aggregate_expressions::aggregate_order::Order<E, true>` implements `QueryFragment<DB>`
     = note: required for `Order<name, false>` to implement `QueryFragment<Mysql>`
     = note: 4 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     For more information about this error, try `rustc --explain E0277`.
